# license

./: .gitignore  .gitmodules  Cargo.toml  EXCEPTION-TEMPLATE  LICENSE-TEMPLATE  README.md  TEMPLATE-FOR-LICENSE.txt  build.rs
.github/workflows/: publish.yml  release.yml  rust.yml  update.yml
examples/: cli.rs
run/: Cargo.toml  EXCEPTION-TEMPLATE  LICENSE-TEMPLATE  README.md  TEMPLATE
run/src/: main.rs
src/: exceptions.rs  ext.rs  lib.rs  licenses.rs  serde.rs
