[package]
name = "license"
version = "2.0.2"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides embedded license information from SPDX."
documentation = "https://docs.rs/license"
repository = "https://github.com/evenorog/license"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["license", "spdx"]
categories = ["no-std"]
exclude = ["/.travis.yml"]
edition = "2021"

[features]
offline = []
default = []

[build-dependencies]
reword = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.test.build-override]
opt-level = 3

[profile.bench.build-override]
opt-level = 3

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = ["offline"]
