[package]
name = "license"
version = "3.4.0+3.24.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Embedded license information from SPDX."
documentation = "https://docs.rs/license"
repository = "https://github.com/evenorog/license"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["license", "spdx"]
categories = ["no-std"]
exclude = ["/license-list-data", "!/license-list-data/json"]
edition = "2021"

[features]
default = []
offline = []

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"

[build-dependencies]
reword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = ["serde"]
